Fix: Hover issue on mobile devices

--- a/src/components/Photos/PhotoList/PhotoItem/photo-item.module.scss
+++ b/src/components/Photos/PhotoList/PhotoItem/photo-item.module.scss
@@ -8,7 +8,7 @@
         margin-top: pxtorem(25);
     }
 
-    &:hover {
+    &.isHovered {
         background-color: $swatch-primary-alt;
 
         .title {
